force-app/main/default/objects/sugati__Cost_Calculation__c/sugati__Cost_Calculation__c.object-meta.xml
<CustomObject>
    <label>Cost Calculation</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Cost Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>