force-app/main/default/objects/sugati__Cost_Calculation__c/fields/sugati__Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>