force-app/main/default/objects/sugati__Cost_Calculation__c/fields/sugati__Custom_Script1__c.field-meta.xml
<CustomField>
    <fullName>sugati__Custom_Script1__c</fullName>
    <label>Custom Script</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>