force-app/main/default/objects/sugati__Cost_Calculation__c/fields/sugati__Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Cost</fullName>
            </value>
            <value>
                <fullName>Selling Price</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>On Popup Load</fullName>
            </value>
            <value>
                <fullName>Compose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>